# plawright-bdd-test

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  README.md  lint.sh  pyproject.toml  setup.py
features/: trip_search.feature
pages/: base_page.py  home_page.py  search_results_page.py
pages/selectors/: home_page_selectors.py
steps/: conftest.py  test_trip_search_steps.py
utils/: airport_code_enum.py  datetime_utils.py
